# ai-operator-controller

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/examples/: learning-candidates.example.json  profile.codex.windows.json  replacements.example.json  speech.local-quality.example.json
docs/: architecture.md  codex-profile-checklist.md  development-plan.md  migration-from-local-dictation.md  privacy-and-safety.md  private-learning-pipeline.md  product-brief.md  public-release-checklist.md  release-notes-v0.1.0.md  roadmap.md  windows-quickstart.md
docs/decisions/: ADR-001-project-scope.md
scripts/: README.md  setup-dev.ps1  smoke.ps1  start-runtime.ps1
src/ai_operator_controller/: __init__.py  actions.py  audio_recorder.py  calibration.py  cli.py  config.py  dictation_quality.py  doctor.py  executor.py  gamepad.py  gamepad_listener.py  learning.py  local_config.py  output.py  runtime.py  screen_navigation.py  speech.py  text_polish.py  text_rules.py  windows_output.py
tests/: test_actions.py  test_audio_recorder.py  test_calibration.py  test_cli.py  test_config.py  test_dictation_quality.py  test_doctor.py  test_executor.py  test_gamepad.py  test_gamepad_listener.py  test_gamepad_runtime.py  test_learning.py  test_local_config.py  test_output.py  test_runtime.py  test_screen_navigation.py  test_setup_script.py  test_smoke_script.py  test_speech.py  test_start_runtime_script.py  test_text_polish.py  test_text_rules.py  test_windows_output.py
