[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-operator-controller"
version = "0.1.0"
description = "Local-first voice and gamepad control layer for AI workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dmitrii Ryumin" }
]
keywords = [
  "dictation",
  "voice-control",
  "gamepad",
  "xbox-controller",
  "codex",
  "chatgpt",
  "whisper",
  "accessibility"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
  "faster-whisper==1.2.1",
  "sounddevice==0.5.5",
  "pynput==1.8.2",
  "pyperclip==1.11.0",
  "numpy==2.4.6",
  "Pillow==12.2.0",
  "pystray==0.19.5",
  "pygame==2.6.1"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "detect-secrets>=1.5",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.8"
]
screen = [
  "pywinauto>=0.6.8"
]

[project.scripts]
ai-operator-controller = "ai_operator_controller.cli:main"

[project.urls]
Homepage = "https://github.com/ryumindmitrii-cmd/ai-operator-controller"
Repository = "https://github.com/ryumindmitrii-cmd/ai-operator-controller"
Issues = "https://github.com/ryumindmitrii-cmd/ai-operator-controller/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
